--- a/meetmeserver/src/main/webapp/UI/LogIn.html
+++ b/meetmeserver/src/main/webapp/UI/LogIn.html
@@ -9,11 +9,11 @@
 <title>User Accounts</title>
 <link type="text/css" rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.min.css" />
 <link type="text/css" rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap-theme.min.css" />
-<link rel="stylesheet" href="Login.css"
+<link rel="stylesheet" href="Login.css"/>
 </head>
 
 <body>
-<div class="container"
+<div class="container">
 <div class="row">
 <div class="col-xs-4 col-md-4 col-lg-4 col-sm-4">
 <div class="logo text-center"> <a class="bild" href="http://www8.hp.com/de/de/home.html"> <img  class="text-center img-responsive"  style=" position:relative; margin-top:30px; margin-left:10px;"alt="App Logo" src="img/bunter-cube-gross.gif"
