--- a/meetmeserver/src/main/webapp/UI/Register.html
+++ b/meetmeserver/src/main/webapp/UI/Register.html
@@ -49,10 +49,14 @@
 <input type="text" class="form-control" id="userName" placeholder="Benutzername festlegen" name="username"/>
 </div>
 
-<div class="form-group"> 
-<label for="registerPassword">Passwort</label>
-<input type="password" class="form-control" id="registerPassword" placeholder="Passwort eintragen" name="password"/>
+<div class="form-group">
+    <label for="registerPassword">Passwort</label>
+    <input type="password" class="form-control" id="registerPassword" placeholder="Passwort eintragen" name="password"/>
 </div>
+    <div class="form-group">
+        <label for="validPassword">Passwort wiederholen</label>
+        <input type="password" class="form-control" id="validPassword" placeholder="Passwort eintragen" name="password"/>
+    </div>
 <div class="form-group">
 <label id="nationality"> Nationalität</label>
 <form>
