--- a/meetmeserver/src/main/webapp/UI/Help.html
+++ b/meetmeserver/src/main/webapp/UI/Help.html
@@ -33,7 +33,7 @@
                                 <div class="col-sm-6"><!-- Einloggen-->
                                     <h4 style="background-color:#85E13A; padding:5%; border-radius:7px; color:white;">Brauchst du Hilfe? </h4>
                                     <p style="font-family:HP Simplified;">Du bist offen für neue Kulturen, lernst gerne neue Leute kennen und besitzt eine gesunde Portion Neugierde?
-                                    Dann bist du hier genau richtig! Werde Mitglied der True Colors Community und bekenne Farbe. <b>#showyourtruecolor</b>
+                                    Dann bist du hier genau richtig! Werde Mitglied der True Colors Community und bekenne Farbe. <a  style="text-decoration:none;" href="https://instagram.com/truecolors2015/"><b>#showyourtruecolor</b></a>
                                     </b>
                                     <h4 style="background-color:#85E13A; padding:5%; border-radius:7px; color:white;">Wie funktionierts? </h4>
                                     <p style="font-family:HP Simplified;"> <a href="Register.html"> Registriere </a> dich noch heute kostenlos in deinem Internet Browser. Im Verlauf der Regsitrierung wirst du aufgefordert, dich einem Team zuzuordnen. Gleichzeitig erhälst du so deine Farbe.
@@ -49,7 +49,7 @@
                                 <div class="row">
                                     <div class="col-sm-12" >
                                 <h4 style="background-color:#149185; padding:2.5%; margin-left:15px; border-radius:7px; color:white;">Ziel des Spiels </h4>
-                                <p style="font-family:HP Simplified; margin-left:15px;">True Color will Menschen unterschiedlicher Herkunft zusammenbringen, Ziel ist es also spielerisch immer neue Leute zu treffen. Dazu müssen wir wissen wo du dich befindest und deine GPS Daten erfassen um festzuhalten, wen du alles schon getroffen hast.
+                                <p style="font-family:HP Simplified; margin-left:15px;">True Colors will Menschen unterschiedlicher Herkunft zusammenbringen, Ziel ist es also spielerisch immer neue Leute zu treffen. Dazu müssen wir wissen wo du dich befindest und deine GPS Daten erfassen um festzuhalten, wen du alles schon getroffen hast.
                                     Wenn du auf einen anderen Spieler der True Colors Community triffst, bekennt ihr Farbe, eure Teamzugehörigkeit wird für beide zum Zeitpunkt der Begegnung sichtbar. Sind die Farben unterschiedlich so regnet es einen Punkt.
 
                                 </p>
