--- a/meetmeserver/src/main/webapp/index.html
+++ b/meetmeserver/src/main/webapp/index.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World! das ist eine Änderung</h1>
+        <h1>Du bist erfolgreich angemeldet!</h1>
     </body>
 </html>
