--- a/meetmeserver/src/main/webapp/firstpage.html
+++ b/meetmeserver/src/main/webapp/firstpage.html
@@ -41,14 +41,14 @@
   <div class="container special">
     <div class="row text-center">
       <div class="col-xs-4 col-xs-offset-1">
-        <div class="jumbotron text-center"  onClick="showAppointmentType()"> 
+        <div class="jumbotron text-center"  onClick="showAppointmentType('hwee')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/Hwee-Leng-Toh-Heng.jpg"/>
           <t class="text lead">Ms. Hwee Leng Toh-Heng</t><br>
          <t class="text small">Learning Advisor</t>
         </div>
       </div>
       <div class="col-xs-4 col-xs-offset-1">
-        <div class="jumbotron text-center" onClick="showAppointmentType()"> 
+        <div class="jumbotron text-center" onClick="showAppointmentType('nimrod')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/n_delante.jpg"/>
           <t class="text lead">Mr. Nimrod Delante</t><br>
           <t class="text small">Learning Advisor</t>
@@ -58,13 +58,13 @@
     
     <div class="row">
       <div class="col-xs-4">
-        <div class="jumbotron text-center" onClick="showAppointmentType()"> <img class="img-responsive img-rounded center-block" src="img/Nicolas-Greliche.jpg"/>
+        <div class="jumbotron text-center" onClick="showAppointmentType('nicolas')"> <img class="img-responsive img-rounded center-block" src="img/Nicolas-Greliche.jpg"/>
         <t class="text lead">Dr. Nicolas Greliche</t><br>
          <t class="text small">Learning Advisor</t>
         </div>
       </div>
       <div class="col-xs-4"> 
-      <div class="jumbotron text-center" onClick="showAppointmentType()"> 
+      <div class="jumbotron text-center" onClick="showAppointmentType('george')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/George-Jacobs.jpg"/>
           <t class="text lead">Dr. George Jacobs</t><br>
           <t class="text small">Learning Advisor</t>
@@ -72,7 +72,7 @@
       </div>
     
       <div class="col-xs-4">
-        <div class="jumbotron text-center" onClick="showAppointmentType()"> 
+        <div class="jumbotron text-center" onClick="showAppointmentType('michael')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/Michael-Joyce.jpg"/>
           <t class="text lead">Mr. Michael James Joyce</t><br>
           <t class="text small">Teacher, Learning Advisor</t>
@@ -97,7 +97,7 @@
 </html>
 
 <script>
-function showAppointmentType() {
-    window.location.assign("AppointmentType.html")
+function showAppointmentType(name) {
+    window.location.assign("advisorPages/makeAppointment_" + name + ".html");
 }
 </script>
