--- a/meetmeserver/src/main/webapp/MakeAppointment.html
+++ b/meetmeserver/src/main/webapp/MakeAppointment.html
@@ -35,7 +35,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="myDefaultNavbar1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="firstpage.html">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="https://www.jcu.edu.sg/student-life/student-support-services/learning-support">Learning Support</a></li>
       </ul>
     </div>
