--- a/meetmeserver/src/main/webapp/makeAppointment_michael.html
+++ b/meetmeserver/src/main/webapp/makeAppointment_michael.html
@@ -1,14 +1,14 @@
-makeAppointment_nimrod.html<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="../img/symbol.png">
+<link rel="icon" href="img/symbol.png">
 <title>Virtual Lobby</title>
 
 <!-- Bootstrap -->
-<link href="../css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,7 +21,7 @@ makeAppointment_nimrod.html<!DOCTYPE html>
 <script>
 
 	function showWaitingPage() {
-    window.location.assign("../Waiting.html");
+    window.location.assign("Waiting.html");
 }
 </script>
 <nav class="navbar navbar-inverse">
@@ -29,11 +29,11 @@ makeAppointment_nimrod.html<!DOCTYPE html>
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myDefaultNavbar1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand" href="#"><img style="height:inherit; padding:0px; margin-top:-20px;" src="../img/jcuslogo.png" /></a> </div>
+      <a class="navbar-brand" href="#"><img style="height:inherit; padding:0px; margin-top:-20px;" src="img/jcuslogo.png" /></a> </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="myDefaultNavbar1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="../index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="https://www.jcu.edu.sg/student-life/student-support-services/learning-support">Learning Support</a></li>
       </ul>
     </div>
@@ -49,16 +49,16 @@ makeAppointment_nimrod.html<!DOCTYPE html>
   </div>
 
   <div class="jumbotron">
-    <div class="row"> <img class="img-responsive img-rounded center-block" style="max-height:200px;" src="img/Nicolas-Greliche.jpg"/> </div>
+    <div class="row"> <img class="img-responsive img-rounded center-block" style="max-height:200px;" src="img/Michael-Joyce.jpg"/> </div>
     <br>
     <div class="row">
     <div class="col-xs-5 col-xs-offset-1"> 
-    <button type="button" class="btn btn-default btn-block" onClick="window.location='../Waiting.html';"><span class="glyphicon glyphicon-circle-arrow-up btn-block"></span><br>
+    <button type="button" class="btn btn-default btn-block" onClick="window.location='Waiting.html';"><span class="glyphicon glyphicon-circle-arrow-up btn-block"></span><br>
         <t class="text-center lead"><strong>See Learning Advisor immediately</strong></t>
         </button>
     </div>
     <div class="col-xs-5"> 
-    <button type="button" onClick="window.location='../MakeAppointment.html';" class="btn btn-default btn-block"><span class="glyphicon glyphicon-education center-block"></span><br>
+    <button type="button" onClick="window.location='MakeAppointment.html';" class="btn btn-default btn-block"><span class="glyphicon glyphicon-education center-block"></span><br>
         <t class="text-center lead"><strong>Make an appointment</strong></t>
         </button>
     </div>
@@ -77,9 +77,9 @@ makeAppointment_nimrod.html<!DOCTYPE html>
 </footer>
 <hr>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="../js/jquery-1.11.2.min.js"></script>
+<script src="js/jquery-1.11.2.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="../js/bootstrap.js"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
