--- a/meetmeserver/src/main/webapp/index.html
+++ b/meetmeserver/src/main/webapp/index.html
@@ -98,6 +98,6 @@
 
 <script>
 function showAppointmentType(name) {
-    window.location.assign("advisorPages/makeAppointment_" + name + ".html");
+    window.location.assign("makeAppointment_" + name + ".html");
 }
 </script>
